--- a/Traffic_Sign_Classifier.ipynb
+++ b/Traffic_Sign_Classifier.ipynb
@@ -325,7 +325,7 @@
     "\n",
     "def create_model(input_data):\n",
     "    builder = ChainBuilder(mean=0, stddev=0.1)\n",
-    "    builder.input(input_data, input_data[0].shape[0:3]).\\\n",
+    "    builder.input(input_data, input_data[0].shape.as_list()[0:3]).\\\n",
     "        conv2d([28, 28, 6], [1, 1]).relu().\\\n",
     "        max_pool([14, 14, 6], [2, 2]).\\\n",
     "        conv2d([10, 10, 16], [1, 1]).relu().\\\n",
