--- a/Traffic_Sign_Classifier.ipynb
+++ b/Traffic_Sign_Classifier.ipynb
@@ -445,7 +445,7 @@
     "        images[i] = equalize_hist(images[i])\n",
     "        \n",
     "\n",
-    "def normalize_input(data):\n",
+    "def normalize_input_1(data):\n",
     "    result = greyscale(data)\n",
     "    equalize_hist_all(result)\n",
     "    return result\n",
@@ -454,7 +454,10 @@
     "def normalize_input_2(data):\n",
     "    result = to_y_channel(data)\n",
     "    equalize_hist_all(result)\n",
-    "    return result"
+    "    return result\n",
+    "\n",
+    "# Select version\n",
+    "normalize_input = normalize_input_1"
    ]
   },
   {
@@ -468,15 +471,16 @@
    "cell_type": "code",
    "execution_count": null,
    "metadata": {
-    "collapsed": false
+    "collapsed": false,
+    "scrolled": false
    },
    "outputs": [],
    "source": [
     "indices = np.random.randint(0, len(X_train), 5)\n",
     "example_images = X_train[indices]\n",
-    "preprocessed_images = normalize_input(example_images)\n",
+    "preprocessed_images_1 = normalize_input_1(example_images)\n",
     "preprocessed_images_2 = normalize_input_2(example_images)\n",
-    "display_images(list(example_images) + list(preprocessed_images) + list(preprocessed_images_2),\n",
+    "display_images(list(example_images) + list(preprocessed_images_1) + list(preprocessed_images_2),\n",
     "               3, 5, figsize=(6, 5))"
    ]
   },
@@ -485,7 +489,7 @@
    "execution_count": null,
    "metadata": {
     "collapsed": false,
-    "scrolled": true
+    "scrolled": false
    },
    "outputs": [],
    "source": [
@@ -614,6 +618,8 @@
    },
    "outputs": [],
    "source": [
+    "# Storing preprocessed images\n",
+    "\n",
     "import pickle\n",
     "\n",
     "with open(training_file, mode='wb') as f:\n",
@@ -632,6 +638,8 @@
    },
    "outputs": [],
    "source": [
+    "# Loading preprocessed images\n",
+    "\n",
     "with open(training_file, mode='rb') as f:\n",
     "    train = pickle.load(f)\n",
     "with open(validation_file, mode='rb') as f:\n",
@@ -643,9 +651,7 @@
     "X_valid, y_valid = valid['features'], valid['labels']\n",
     "X_test, y_test = test['features'], test['labels']\n",
     "\n",
-    "image_shape = X_train_extended[0].shape\n",
-    "\n",
-    "print(image_shape)"
+    "image_shape = X_train_extended[0].shape"
    ]
   },
   {
@@ -672,12 +678,11 @@
    "cell_type": "code",
    "execution_count": null,
    "metadata": {
-    "collapsed": true
+    "collapsed": false
    },
    "outputs": [],
    "source": [
     "### Define your architecture here.\n",
-    "### Feel free to use as many code cells as needed.\n",
     "\n",
     "import tensorflow as tf\n",
     "\n",
@@ -686,25 +691,8 @@
     "    return input_shape + strides - output_shape*strides\n",
     "\n",
     "\n",
-    "def create_conv(input_data, input_shape, output_shape, strides, mean, stddev):\n",
-    "    conv_shape = (get_shape(input_shape[0], output_shape[0], strides[0]),\n",
-    "                  get_shape(input_shape[1], output_shape[1], strides[1]))\n",
-    "    if len(input_shape) < 3:\n",
-    "        input_depth = 1\n",
-    "    else:\n",
-    "        input_depth = input_shape[2]\n",
-    "    weights = tf.Variable(tf.truncated_normal(\n",
-    "        shape=(conv_shape[0], conv_shape[1], input_depth, output_shape[2]),\n",
-    "        mean=mean, stddev=stddev))\n",
-    "    #print(\"weights={}\".format(weights))\n",
-    "    biases = tf.Variable(tf.zeros(output_shape[2]))\n",
-    "    conv = tf.nn.conv2d(input_data, weights, strides=[1]+strides+[1], padding='VALID') +\\\n",
-    "           biases\n",
-    "    return conv\n",
-    "\n",
-    "\n",
     "class ChainBuilder(object):\n",
-    "    def __init__(self, mean, stddev):\n",
+    "    def __init__(self, mean=None, stddev=None):\n",
     "        self._output = None\n",
     "        self._input = None\n",
     "        self._output_shape = None\n",
@@ -717,11 +705,25 @@
     "        self._output_shape = input_shape\n",
     "        return self\n",
     "\n",
-    "    def conv2d(self, output_shape, strides):\n",
-    "        self._output = create_conv(self._output, self._output_shape, output_shape,\n",
-    "                                   strides, self._mean, self._stddev)\n",
-    "        self._output_shape = output_shape\n",
-    "        #print(\"conv2d result: output_shape={}, output={}\".format(self._output_shape, self._output))\n",
+    "    def conv2d(self, filter_shape, strides, name):\n",
+    "        input_shape = self._output_shape\n",
+    "    \n",
+    "        if len(input_shape) < 3:\n",
+    "            input_depth = 1\n",
+    "        else:\n",
+    "            input_depth = input_shape[2]\n",
+    "            \n",
+    "        with tf.variable_scope(name):\n",
+    "            weights = tf.get_variable('weights',\n",
+    "                                      shape=(filter_shape[0], filter_shape[1], input_depth, filter_shape[2]))\n",
+    "        \n",
+    "            biases = tf.get_variable('biases',\n",
+    "                                     initializer=tf.zeros_initializer(),\n",
+    "                                     shape=filter_shape[2])\n",
+    "        \n",
+    "            self._output = tf.nn.conv2d(self._output, weights, strides=[1]+strides+[1], padding='VALID') + biases\n",
+    "            self._output_shape = self._output.shape.as_list()[1:]\n",
+    "        print(\"conv2d result: output_shape={}, output={}\".format(self._output_shape, self._output))\n",
     "        return self\n",
     "    \n",
     "    @property\n",
@@ -736,16 +738,13 @@
     "        self._output = tf.nn.relu(self._output)\n",
     "        return self\n",
     "    \n",
-    "    def max_pool(self, output_shape, strides):\n",
+    "    def max_pool(self, kernel, strides):\n",
     "        assert len(self._output_shape) == 3\n",
-    "        h = get_shape(self._output_shape[0], output_shape[0], strides[0])\n",
-    "        w = get_shape(self._output_shape[1], output_shape[1], strides[1])\n",
-    "        #print(\"max_pool input: {} {} [1, {}, {}, 1]\".format(output_shape, strides, w, h))\n",
     "        self._output = tf.nn.max_pool(self._output,\n",
-    "                                      ksize=[1, w, h, 1],\n",
+    "                                      ksize=[1, kernel[0], kernel[1], 1],\n",
     "                                      strides=[1]+strides+[1],\n",
-    "                                      padding='VALID')\n",
-    "        self._output_shape = output_shape\n",
+    "                                      padding='SAME')\n",
+    "        self._output_shape = self._output.shape.as_list()[1:]\n",
     "        #print(\"max_pool result: output_shape={}, output={}\".format(self._output_shape, self._output))\n",
     "        return self\n",
     "    \n",
@@ -761,13 +760,17 @@
     "        self._output_shape = [self._output.shape.as_list()[1]]\n",
     "        return self\n",
     "    \n",
-    "    def fc(self, output_n):\n",
+    "    def fc(self, output_n, name):\n",
     "        assert len(self._output_shape) == 1\n",
     "        #print(\"Creating fc({}, {}, {})\".format(self._output_shape, output_n, self._output))\n",
-    "        weights = tf.Variable(tf.truncated_normal(shape=(self._output_shape[0], output_n),\n",
-    "                                                  mean=self._mean,\n",
-    "                                                  stddev=self._stddev))\n",
-    "        biases = tf.Variable(tf.zeros(output_n))\n",
+    "\n",
+    "        with tf.variable_scope(name):\n",
+    "            weights = tf.get_variable('weights',\n",
+    "                                     shape=(self._output_shape[0], output_n))\n",
+    "            biases = tf.get_variable('biases',\n",
+    "                                     initializer=tf.zeros_initializer(),\n",
+    "                                     shape=(output_n,))\n",
+    "        \n",
     "        fc = tf.matmul(self._output, weights) + biases\n",
     "        self._output = fc\n",
     "        self._output_shape = [output_n]\n",
@@ -784,37 +787,35 @@
    "source": [
     "# Standard LeNet architecture produces 0.753 validation accuracy and about 0.2 accuracy on web dataset\n",
     "def create_model_lenet(input_data, n_classes):\n",
-    "    builder = ChainBuilder(mean=0, stddev=0.1)\n",
-    "    builder.input(input_data, input_data[0].shape.as_list()[0:3]).\\\n",
-    "        conv2d([28, 28, 6], [1, 1]).relu().\\\n",
-    "        max_pool([14, 14, 6], [2, 2]).\\\n",
-    "        conv2d([10, 10, 16], [1, 1]).relu().\\\n",
-    "        max_pool([5, 5, 16], [2, 2]).\\\n",
-    "        flatten().\\\n",
-    "        fc(400).relu().\\\n",
-    "        fc(100).relu().\\\n",
-    "        fc(n_classes)\n",
+    "    with tf.variable_scope('lenet1', initializer=tf.truncated_normal_initializer(mean=0, stddev=0.1)):\n",
+    "        builder = ChainBuilder()\n",
+    "        builder.input(input_data, input_data[0].shape.as_list()[0:3]).\\\n",
+    "            conv2d([5, 5, 6], [1, 1]).relu().\\\n",
+    "            max_pool([2, 2], [2, 2]).\\\n",
+    "            conv2d([5, 5, 16], [1, 1]).relu().\\\n",
+    "            max_pool([2, 2], [2, 2]).\\\n",
+    "            flatten().\\\n",
+    "            fc(400).relu().\\\n",
+    "            fc(100).relu().\\\n",
+    "            fc(n_classes)\n",
     "    return builder.output\n",
     "\n",
     "# Multiscale\n",
     "def create_model(input_data, n_classes):\n",
-    "    builder1 = ChainBuilder(mean=0, stddev=0.1)\n",
-    "    builder1.input(input_data, input_data[0].shape.as_list()[0:3]).\\\n",
-    "        conv2d([28, 28, 32], [1, 1]).relu().\\\n",
-    "        max_pool([14, 14, 32], [2, 2])\n",
-    "    builder2 = ChainBuilder(mean=0, stddev=0.1)\n",
-    "    builder2.input(builder1.output, builder1.output_shape).\\\n",
-    "        conv2d([10, 10, 64], [1, 1]).relu().\\\n",
-    "        max_pool([5, 5, 64], [2, 2])\n",
-    "    builder3 = ChainBuilder(mean=0, stddev=0.1)\n",
-    "    builder3.input(builder2.output, builder2.output_shape).\\\n",
-    "        conv2d([5, 5, 128], [1, 1]).relu().\\\n",
-    "        max_pool([3, 3, 128], [2, 2]).\\\n",
-    "        flatten().\\\n",
-    "        concat([builder1.flatten().output, builder2.flatten().output]).\\\n",
-    "        fc(400).relu().\\\n",
-    "        fc(n_classes)\n",
-    "    return builder3.output"
+    "    with tf.variable_scope('ms10', initializer=tf.truncated_normal_initializer(mean=0, stddev=0.1)):\n",
+    "        builder1 = ChainBuilder()\n",
+    "        builder1.input(input_data, input_data[0].shape.as_list()[0:3]).\\\n",
+    "            conv2d([5, 5, 32], [1, 1], 'conv_1').relu().\\\n",
+    "            max_pool([2, 2], [2, 2])\n",
+    "        builder2 = ChainBuilder()\n",
+    "        builder2.input(builder1.output, builder1.output_shape).\\\n",
+    "            conv2d([5, 5, 128], [1, 1], 'conv_2').relu().\\\n",
+    "            max_pool([2, 2], [2, 2]).\\\n",
+    "            flatten().\\\n",
+    "            concat([builder1.max_pool([2, 2], [2, 2]).flatten().output]).\\\n",
+    "            fc(400, 'fc_1').relu().\\\n",
+    "            fc(n_classes, 'fc_2')\n",
+    "    return builder2.output"
    ]
   },
   {
@@ -844,7 +845,11 @@
     "### Calculate and report the accuracy on the training and validation set.\n",
     "### Once a final model architecture is selected, \n",
     "### the accuracy on the test set should be calculated and reported as well.\n",
-    "### Feel free to use as many code cells as needed."
+    "### Feel free to use as many code cells as needed.\n",
+    "\n",
+    "EPOCHS = 10\n",
+    "BATCH_SIZE = 128\n",
+    "learning_rate = 0.001"
    ]
   },
   {
@@ -856,10 +861,6 @@
    },
    "outputs": [],
    "source": [
-    "EPOCHS = 5\n",
-    "BATCH_SIZE = 128\n",
-    "learning_rate = 0.001\n",
-    "\n",
     "input_x = tf.placeholder(tf.float32, [None] + list(image_shape))\n",
     "input_y = tf.placeholder(tf.int32, (None, ))\n",
     "\n",
@@ -872,12 +873,12 @@
     "correct_prediction = tf.equal(tf.argmax(logits, 1), tf.argmax(output_one_hot_y, 1))\n",
     "accuracy_operation = tf.reduce_mean(tf.cast(correct_prediction, tf.float32))\n",
     "\n",
-    "def evaluate(X_data, y_data):\n",
+    "def evaluate(X_data, y_data, batch_size):\n",
     "    num_examples = len(X_data)\n",
     "    total_accuracy = 0\n",
     "    sess = tf.get_default_session()\n",
-    "    for offset in range(0, num_examples, BATCH_SIZE):\n",
-    "        batch_x, batch_y = X_data[offset:offset+BATCH_SIZE], y_data[offset:offset+BATCH_SIZE]\n",
+    "    for offset in range(0, num_examples, batch_size):\n",
+    "        batch_x, batch_y = X_data[offset:offset+batch_size], y_data[offset:offset+batch_size]\n",
     "        accuracy = sess.run(accuracy_operation, feed_dict={input_x: batch_x, input_y: batch_y})\n",
     "        total_accuracy += (accuracy * len(batch_x))\n",
     "    return total_accuracy / num_examples"
@@ -891,7 +892,7 @@
    },
    "outputs": [],
    "source": [
-    "def train_the_model(X_train, y_train, X_valid, y_valid):\n",
+    "def train_the_model(X_train, y_train, X_valid, y_valid, batch_size, epochs):\n",
     "    saver = tf.train.Saver()\n",
     "    \n",
     "    with tf.Session() as sess:\n",
@@ -900,14 +901,14 @@
     "        \n",
     "        print(\"Training...\")\n",
     "        print()\n",
-    "        for i in range(EPOCHS):\n",
+    "        for i in range(epochs):\n",
     "            X_train, y_train = shuffle(X_train, y_train)\n",
-    "            for offset in range(0, num_examples, BATCH_SIZE):\n",
-    "                end = offset + BATCH_SIZE\n",
+    "            for offset in range(0, num_examples, batch_size):\n",
+    "                end = offset + batch_size\n",
     "                batch_x, batch_y = X_train[offset:end], y_train[offset:end]\n",
     "                sess.run(training_operation, feed_dict={input_x: batch_x, input_y: batch_y})\n",
     "                \n",
-    "            validation_accuracy = evaluate(X_valid, y_valid)\n",
+    "            validation_accuracy = evaluate(X_valid, y_valid, batch_size)\n",
     "            print(\"EPOCH {} ...\".format(i+1))\n",
     "            print(\"Validation Accuracy = {:.3f}\".format(validation_accuracy))\n",
     "            print()\n",
@@ -925,7 +926,7 @@
    },
    "outputs": [],
    "source": [
-    "train_the_model(X_train_extended, y_train_extended, X_valid, y_valid)"
+    "train_the_model(X_train_extended, y_train_extended, X_valid, y_valid, BATCH_SIZE, EPOCHS)"
    ]
   },
   {
@@ -1039,7 +1040,7 @@
     "\n",
     "with tf.Session() as sess:\n",
     "    saver.restore(sess, './lenet')\n",
-    "    validation_accuracy = evaluate(X_web, y_web)\n",
+    "    validation_accuracy = evaluate(X_web, y_web, BATCH_SIZE)\n",
     "    print(\"Validation Accuracy = {:.3f}\".format(validation_accuracy))"
    ]
   },
