Added color, filters visualisation

--- a/Traffic_Sign_Classifier.ipynb
+++ b/Traffic_Sign_Classifier.ipynb
@@ -280,6 +280,7 @@
    "outputs": [],
    "source": [
     "from skimage.util import dtype\n",
+    "from skimage.color import hsv2rgb\n",
     "import numpy as np\n",
     "\n",
     "def _prepare_colorarray(arr):\n",
@@ -441,7 +442,7 @@
     "    total = images.shape[0]\n",
     "    for i in range(total):\n",
     "        if total > 500 and i % 500 == 0:\n",
-    "            print(\"Processing {} out of {}\".format(i, total))\n",
+    "            print(\"Processed {} out of {}\".format(i, total))\n",
     "        images[i] = equalize_hist(images[i])\n",
     "        \n",
     "\n",
@@ -456,8 +457,17 @@
     "    equalize_hist_all(result)\n",
     "    return result\n",
     "\n",
+    "def normalize_input_3(data):\n",
+    "    total = data.shape[0]\n",
+    "    result = np.empty_like(data, dtype=np.float32)\n",
+    "    for i in range(total):\n",
+    "        if total > 500 and i % 500 == 0:\n",
+    "            print(\"Processed {} out of {}\".format(i, total))\n",
+    "        result[i] = skimage.exposure.equalize_adapthist(data[i])\n",
+    "    return result\n",
+    "\n",
     "# Select version\n",
-    "normalize_input = normalize_input_1"
+    "normalize_input = normalize_input_3"
    ]
   },
   {
@@ -480,8 +490,11 @@
     "example_images = X_train[indices]\n",
     "preprocessed_images_1 = normalize_input_1(example_images)\n",
     "preprocessed_images_2 = normalize_input_2(example_images)\n",
-    "display_images(list(example_images) + list(preprocessed_images_1) + list(preprocessed_images_2),\n",
-    "               3, 5, figsize=(6, 5))"
+    "preprocessed_images_3 = normalize_input_3(example_images)\n",
+    "display_images(list(example_images) +\\\n",
+    "               list(preprocessed_images_1) +\\\n",
+    "               list(preprocessed_images_2) + list(preprocessed_images_3),\n",
+    "               4, 5, figsize=(6, 5))"
    ]
   },
   {
@@ -605,9 +618,9 @@
    },
    "outputs": [],
    "source": [
-    "training_file = './traffic-signs-data/train_grayscale_equalized.p'\n",
-    "validation_file= './traffic-signs-data/valid_grayscale_equalized.p'\n",
-    "testing_file = './traffic-signs-data/test_grayscale_equalized.p'"
+    "training_file = './traffic-signs-data/train_color_equalized.p'\n",
+    "validation_file= './traffic-signs-data/valid_color_equalized.p'\n",
+    "testing_file = './traffic-signs-data/test_color_equalized.p'"
    ]
   },
   {
@@ -787,21 +800,21 @@
    "source": [
     "# Standard LeNet architecture produces 0.753 validation accuracy and about 0.2 accuracy on web dataset\n",
     "def create_model_lenet(input_data, n_classes):\n",
-    "    with tf.variable_scope('lenet1', initializer=tf.truncated_normal_initializer(mean=0, stddev=0.1)):\n",
+    "    with tf.variable_scope('lenet3', initializer=tf.truncated_normal_initializer(mean=0, stddev=0.1)):\n",
     "        builder = ChainBuilder()\n",
     "        builder.input(input_data, input_data[0].shape.as_list()[0:3]).\\\n",
-    "            conv2d([5, 5, 6], [1, 1]).relu().\\\n",
+    "            conv2d([5, 5, 6], [1, 1], 'conv_1').relu().\\\n",
     "            max_pool([2, 2], [2, 2]).\\\n",
-    "            conv2d([5, 5, 16], [1, 1]).relu().\\\n",
+    "            conv2d([5, 5, 16], [1, 1], 'conv_2').relu().\\\n",
     "            max_pool([2, 2], [2, 2]).\\\n",
     "            flatten().\\\n",
-    "            fc(400).relu().\\\n",
-    "            fc(100).relu().\\\n",
-    "            fc(n_classes)\n",
+    "            fc(400, 'fc_1').relu().\\\n",
+    "            fc(100, 'fc_2').relu().\\\n",
+    "            fc(n_classes, 'fc_3')\n",
     "    return builder.output\n",
     "\n",
     "# Multiscale\n",
-    "def create_model(input_data, n_classes):\n",
+    "def create_model_ms10(input_data, n_classes):\n",
     "    with tf.variable_scope('ms10', initializer=tf.truncated_normal_initializer(mean=0, stddev=0.1)):\n",
     "        builder1 = ChainBuilder()\n",
     "        builder1.input(input_data, input_data[0].shape.as_list()[0:3]).\\\n",
@@ -815,7 +828,23 @@
     "            concat([builder1.max_pool([2, 2], [2, 2]).flatten().output]).\\\n",
     "            fc(400, 'fc_1').relu().\\\n",
     "            fc(n_classes, 'fc_2')\n",
-    "    return builder2.output"
+    "    return builder2.output\n",
+    "\n",
+    "def create_model_ss1(input_data, n_classes):\n",
+    "    # http://people.idsia.ch/~ciresan/data/cvpr2012.pdf\n",
+    "    with tf.variable_scope('ss3', initializer=tf.contrib.layers.xavier_initializer()):\n",
+    "        builder1 = ChainBuilder()\n",
+    "        builder1.input(input_data, input_data[0].shape.as_list()[0:3]).\\\n",
+    "            conv2d([7, 7, 100], [1, 1], 'conv_1').relu().\\\n",
+    "            max_pool([2, 2], [2, 2]).\\\n",
+    "            conv2d([4, 4, 150], [1, 1], 'conv_2').relu().\\\n",
+    "            max_pool([2, 2], [2, 2]).\\\n",
+    "            conv2d([4, 4, 250], [1, 1], 'conv_3').relu().\\\n",
+    "            max_pool([2, 2], [2, 2]).\\\n",
+    "            flatten().\\\n",
+    "            fc(300, 'fc_1').relu().\\\n",
+    "            fc(n_classes, 'fc_2')\n",
+    "    return builder1.output"
    ]
   },
   {
@@ -847,7 +876,7 @@
     "### the accuracy on the test set should be calculated and reported as well.\n",
     "### Feel free to use as many code cells as needed.\n",
     "\n",
-    "EPOCHS = 10\n",
+    "EPOCHS = 50\n",
     "BATCH_SIZE = 128\n",
     "learning_rate = 0.001"
    ]
@@ -865,7 +894,7 @@
     "input_y = tf.placeholder(tf.int32, (None, ))\n",
     "\n",
     "output_one_hot_y = tf.one_hot(input_y, n_classes)\n",
-    "logits = create_model(input_x, n_classes)\n",
+    "logits = create_model_ss1(input_x, n_classes)\n",
     "cross_entropy = tf.nn.softmax_cross_entropy_with_logits(logits=logits, labels=output_one_hot_y)\n",
     "loss_operation = tf.reduce_mean(cross_entropy)\n",
     "optimizer = tf.train.AdamOptimizer(learning_rate=learning_rate)\n",
@@ -1011,8 +1040,7 @@
     "# Launch the graph\n",
     "with tf.Session() as sess:\n",
     "    saver.restore(sess, './lenet')\n",
-    "    \n",
-    "    sess = tf.get_default_session()\n",
+    "\n",
     "    result = sess.run(tf.argmax(logits, 1), feed_dict={input_x: X_web, input_y: y_web})\n",
     "\n",
     "    print(\"Result   = {}\".format(result))\n",
@@ -1095,15 +1123,29 @@
    ]
   },
   {
-   "cell_type": "code",
-   "execution_count": null,
+   "cell_type": "markdown",
    "metadata": {
     "collapsed": true
    },
+   "source": [
+    "##### Print out the top five softmax probabilities for the predictions on the German traffic sign images found on the web. "
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "metadata": {
+    "collapsed": false
+   },
    "outputs": [],
    "source": [
-    "### Print out the top five softmax probabilities for the predictions on the German traffic sign images found on the web. \n",
-    "### Feel free to use as many code cells as needed."
+    "with tf.Session() as sess:\n",
+    "    saver.restore(sess, './lenet')\n",
+    "    result = sess.run(tf.nn.top_k(logits, 5), feed_dict={input_x: X_web, input_y: y_web})\n",
+    "    for img_idx in range(len(result.values)):\n",
+    "        print(\"Image {}, expected class {}\".format(img_idx, y_web[img_idx]))\n",
+    "        for idx in range(len(result.values[img_idx])):\n",
+    "            print(\"  class {:2} - {:6.3f}\".format(result.indices[img_idx][idx], result.values[img_idx][idx]))"
    ]
   },
   {
@@ -1146,18 +1188,20 @@
     "# activation_min/max: can be used to view the activation contrast in more detail, by default matplot sets min and max to the actual min and max values of the output\n",
     "# plt_num: used to plot out multiple different weight feature map sets on the same block, just extend the plt number for each new feature map entry\n",
     "\n",
-    "def outputFeatureMap(image_input, tf_activation, activation_min=-1, activation_max=-1 ,plt_num=1):\n",
+    "def outputFeatureMap(image_input, tf_activation, sess, activation_min=-1, activation_max=-1 ,plt_num=1):\n",
     "    # Here make sure to preprocess your image_input in a way your network expects\n",
     "    # with size, normalization, ect if needed\n",
     "    # image_input =\n",
     "    # Note: x should be the same name as your network's tensorflow data placeholder variable\n",
     "    # If you get an error tf_activation is not defined it maybe having trouble accessing the variable from inside a function\n",
-    "    activation = tf_activation.eval(session=sess,feed_dict={x : image_input})\n",
+    "    activation = tf_activation.eval(session=sess,feed_dict={input_x : image_input})\n",
     "    featuremaps = activation.shape[3]\n",
     "    plt.figure(plt_num, figsize=(15,15))\n",
     "    for featuremap in range(featuremaps):\n",
-    "        plt.subplot(6,8, featuremap+1) # sets the number of feature maps to show on each row and column\n",
-    "        plt.title('FeatureMap ' + str(featuremap)) # displays the feature map number\n",
+    "        plt.subplot(15,17, featuremap+1) # sets the number of feature maps to show on each row and column\n",
+    "        #plt.title(str(featuremap)) # displays the feature map number\n",
+    "        plt.subplots_adjust(hspace=0.0, wspace=0.0)\n",
+    "        plt.axis('off')\n",
     "        if activation_min != -1 & activation_max != -1:\n",
     "            plt.imshow(activation[0,:,:, featuremap], interpolation=\"nearest\", vmin =activation_min, vmax=activation_max, cmap=\"gray\")\n",
     "        elif activation_max != -1:\n",
@@ -1166,6 +1210,25 @@
     "            plt.imshow(activation[0,:,:, featuremap], interpolation=\"nearest\", vmin=activation_min, cmap=\"gray\")\n",
     "        else:\n",
     "            plt.imshow(activation[0,:,:, featuremap], interpolation=\"nearest\", cmap=\"gray\")"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "metadata": {
+    "collapsed": false,
+    "scrolled": false
+   },
+   "outputs": [],
+   "source": [
+    "with tf.Session() as sess:\n",
+    "    saver.restore(sess, './lenet')\n",
+    "    outputFeatureMap([X_test[100]], tf.get_default_graph().get_tensor_by_name(\"ss3/conv_1/add:0\"), sess)\n",
+    "    plt.show()\n",
+    "    outputFeatureMap([X_test[100]], tf.get_default_graph().get_tensor_by_name(\"ss3/conv_2/add:0\"), sess)\n",
+    "    plt.show()\n",
+    "    outputFeatureMap([X_test[100]], tf.get_default_graph().get_tensor_by_name(\"ss3/conv_3/add:0\"), sess)\n",
+    "    plt.show()"
    ]
   },
   {
