--- a/Traffic_Sign_Classifier.ipynb
+++ b/Traffic_Sign_Classifier.ipynb
@@ -229,10 +229,18 @@
     "    ax.set_xticks(sorted_keys)\n",
     "    ax.set_xlabel('Class')\n",
     "    ax.set_title(title)\n",
-    "    plt.show()\n",
-    "\n",
-    "plot_counts_by_class(y_train, 'Training examples by class')\n",
-    "#plot_counts_by_class(y_test, 'Test examples by class')"
+    "    plt.show()"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "metadata": {
+    "collapsed": true
+   },
+   "outputs": [],
+   "source": [
+    "plot_counts_by_class(y_train, 'Training examples by class')"
    ]
   },
   {
@@ -653,6 +661,8 @@
    "source": [
     "# Loading preprocessed images\n",
     "\n",
+    "import pickle\n",
+    "\n",
     "with open(training_file, mode='rb') as f:\n",
     "    train = pickle.load(f)\n",
     "with open(validation_file, mode='rb') as f:\n",
@@ -711,6 +721,7 @@
     "        self._output_shape = None\n",
     "        self._mean = mean\n",
     "        self._stddev = stddev\n",
+    "        self._regularizers = []\n",
     "\n",
     "    def input(self, input_data, input_shape):\n",
     "        self._input = input_data\n",
@@ -736,6 +747,7 @@
     "        \n",
     "            self._output = tf.nn.conv2d(self._output, weights, strides=[1]+strides+[1], padding='VALID') + biases\n",
     "            self._output_shape = self._output.shape.as_list()[1:]\n",
+    "            #self._regularizers.append(tf.nn.l2_loss(weights))\n",
     "        print(\"conv2d result: output_shape={}, output={}\".format(self._output_shape, self._output))\n",
     "        return self\n",
     "    \n",
@@ -746,6 +758,10 @@
     "    @property\n",
     "    def output_shape(self):\n",
     "        return self._output_shape\n",
+    "    \n",
+    "    @property\n",
+    "    def regularizers(self):\n",
+    "        return self._regularizers\n",
     "    \n",
     "    def relu(self):\n",
     "        self._output = tf.nn.relu(self._output)\n",
@@ -768,6 +784,10 @@
     "        #print(\"flatten result: output_shape={}, output={}\".format(self._output_shape, self._output))\n",
     "        return self\n",
     "    \n",
+    "    def dropout(self, keep_prob):\n",
+    "        self._output = tf.nn.dropout(self._output, keep_prob)\n",
+    "        return self\n",
+    "    \n",
     "    def concat(self, what):\n",
     "        self._output = tf.concat([self._output] + what, 1)\n",
     "        self._output_shape = [self._output.shape.as_list()[1]]\n",
@@ -783,6 +803,7 @@
     "            biases = tf.get_variable('biases',\n",
     "                                     initializer=tf.zeros_initializer(),\n",
     "                                     shape=(output_n,))\n",
+    "            self._regularizers.append(tf.nn.l2_loss(weights))\n",
     "        \n",
     "        fc = tf.matmul(self._output, weights) + biases\n",
     "        self._output = fc\n",
@@ -830,21 +851,25 @@
     "            fc(n_classes, 'fc_2')\n",
     "    return builder2.output\n",
     "\n",
-    "def create_model_ss1(input_data, n_classes):\n",
+    "def create_model_ss1(input_data, n_classes, keep_prob):\n",
     "    # http://people.idsia.ch/~ciresan/data/cvpr2012.pdf\n",
-    "    with tf.variable_scope('ss3', initializer=tf.contrib.layers.xavier_initializer()):\n",
+    "    with tf.variable_scope('ss16', initializer=tf.contrib.layers.xavier_initializer()):\n",
     "        builder1 = ChainBuilder()\n",
     "        builder1.input(input_data, input_data[0].shape.as_list()[0:3]).\\\n",
     "            conv2d([7, 7, 100], [1, 1], 'conv_1').relu().\\\n",
     "            max_pool([2, 2], [2, 2]).\\\n",
+    "            dropout(keep_prob[0]).\\\n",
     "            conv2d([4, 4, 150], [1, 1], 'conv_2').relu().\\\n",
     "            max_pool([2, 2], [2, 2]).\\\n",
+    "            dropout(keep_prob[1]).\\\n",
     "            conv2d([4, 4, 250], [1, 1], 'conv_3').relu().\\\n",
     "            max_pool([2, 2], [2, 2]).\\\n",
+    "            dropout(keep_prob[2]).\\\n",
     "            flatten().\\\n",
     "            fc(300, 'fc_1').relu().\\\n",
+    "            dropout(keep_prob[3]).\\\n",
     "            fc(n_classes, 'fc_2')\n",
-    "    return builder1.output"
+    "    return builder1.output, builder1.regularizers"
    ]
   },
   {
@@ -876,9 +901,11 @@
     "### the accuracy on the test set should be calculated and reported as well.\n",
     "### Feel free to use as many code cells as needed.\n",
     "\n",
-    "EPOCHS = 50\n",
+    "EPOCHS = 10\n",
     "BATCH_SIZE = 128\n",
-    "learning_rate = 0.001"
+    "learning_rate = 0.001\n",
+    "INPUT_KEEP_PROB = [0.9, 0.9, 0.8, 0.5]\n",
+    "BETA = 0.001"
    ]
   },
   {
@@ -894,9 +921,10 @@
     "input_y = tf.placeholder(tf.int32, (None, ))\n",
     "\n",
     "output_one_hot_y = tf.one_hot(input_y, n_classes)\n",
-    "logits = create_model_ss1(input_x, n_classes)\n",
+    "keep_prob = tf.placeholder(tf.float32, shape=(4,), name='keep_prob')\n",
+    "logits, regularizers = create_model_ss1(input_x, n_classes, keep_prob)\n",
     "cross_entropy = tf.nn.softmax_cross_entropy_with_logits(logits=logits, labels=output_one_hot_y)\n",
-    "loss_operation = tf.reduce_mean(cross_entropy)\n",
+    "loss_operation = tf.reduce_mean(cross_entropy) + BETA * sum(regularizers)\n",
     "optimizer = tf.train.AdamOptimizer(learning_rate=learning_rate)\n",
     "training_operation = optimizer.minimize(loss_operation)\n",
     "correct_prediction = tf.equal(tf.argmax(logits, 1), tf.argmax(output_one_hot_y, 1))\n",
@@ -908,7 +936,8 @@
     "    sess = tf.get_default_session()\n",
     "    for offset in range(0, num_examples, batch_size):\n",
     "        batch_x, batch_y = X_data[offset:offset+batch_size], y_data[offset:offset+batch_size]\n",
-    "        accuracy = sess.run(accuracy_operation, feed_dict={input_x: batch_x, input_y: batch_y})\n",
+    "        accuracy = sess.run(accuracy_operation, feed_dict={input_x: batch_x, input_y: batch_y,\n",
+    "                                                           keep_prob: [1.0] * keep_prob.shape[0]})\n",
     "        total_accuracy += (accuracy * len(batch_x))\n",
     "    return total_accuracy / num_examples"
    ]
@@ -921,8 +950,31 @@
    },
    "outputs": [],
    "source": [
-    "def train_the_model(X_train, y_train, X_valid, y_valid, batch_size, epochs):\n",
+    "%matplotlib notebook\n",
+    "\n",
+    "def train_the_model(X_train, y_train, X_valid, y_valid, batch_size, epochs, input_keep_prob):\n",
+    "    plt.rcdefaults()\n",
+    "    #matplotlib.rcParams['figure.figsize'] = (10.0, 5.0)\n",
+    "    fig = plt.figure(figsize=(6.0, 4.0), dpi=255)\n",
+    "    ax = fig.add_subplot(111)\n",
+    "    plt.ion()\n",
+    "    ax.set_xlabel('Epochs')\n",
+    "    ax.set_ylabel('Accuracy')\n",
+    "    ax.set_xlim(0, epochs)\n",
+    "    ax.set_ylim(0.9, 1.0)\n",
+    "    fig.show()\n",
+    "    fig.canvas.draw()\n",
+    "    \n",
+    "    def plot_points(points_list, colors):\n",
+    "        ax.clear()\n",
+    "        for points, color in zip(points_list, colors):\n",
+    "            ax.plot(points, color=color, linewidth=2)\n",
+    "        fig.canvas.draw()\n",
+    "    \n",
     "    saver = tf.train.Saver()\n",
+    "    \n",
+    "    train_accuracy_hist = []\n",
+    "    validation_accuracy_hist = []\n",
     "    \n",
     "    with tf.Session() as sess:\n",
     "        sess.run(tf.global_variables_initializer())\n",
@@ -935,12 +987,22 @@
     "            for offset in range(0, num_examples, batch_size):\n",
     "                end = offset + batch_size\n",
     "                batch_x, batch_y = X_train[offset:end], y_train[offset:end]\n",
-    "                sess.run(training_operation, feed_dict={input_x: batch_x, input_y: batch_y})\n",
+    "                sess.run(training_operation, feed_dict={input_x: batch_x, input_y: batch_y,\n",
+    "                                                        keep_prob: input_keep_prob})\n",
     "                \n",
+    "            train_accuracy = evaluate(X_train, y_train, batch_size)\n",
     "            validation_accuracy = evaluate(X_valid, y_valid, batch_size)\n",
+    "            \n",
+    "            train_accuracy_hist.append(train_accuracy)\n",
+    "            validation_accuracy_hist.append(validation_accuracy)\n",
+    "            \n",
     "            print(\"EPOCH {} ...\".format(i+1))\n",
-    "            print(\"Validation Accuracy = {:.3f}\".format(validation_accuracy))\n",
+    "            print(\"Train Accuracy = {:.5f}, Validation Accuracy = {:.5f}\".format(\n",
+    "                train_accuracy,\n",
+    "                validation_accuracy))\n",
     "            print()\n",
+    "\n",
+    "            plot_points([train_accuracy_hist, validation_accuracy_hist], ['r', 'b'])\n",
     "            \n",
     "        saver.save(sess, './lenet')\n",
     "        print(\"Model saved\")"
@@ -955,7 +1017,7 @@
    },
    "outputs": [],
    "source": [
-    "train_the_model(X_train_extended, y_train_extended, X_valid, y_valid, BATCH_SIZE, EPOCHS)"
+    "train_the_model(X_train_extended, y_train_extended, X_valid, y_valid, BATCH_SIZE, EPOCHS, INPUT_KEEP_PROB)"
    ]
   },
   {
@@ -1041,7 +1103,8 @@
     "with tf.Session() as sess:\n",
     "    saver.restore(sess, './lenet')\n",
     "\n",
-    "    result = sess.run(tf.argmax(logits, 1), feed_dict={input_x: X_web, input_y: y_web})\n",
+    "    result = sess.run(tf.argmax(logits, 1), feed_dict={input_x: X_web, input_y: y_web,\n",
+    "                                                       keep_prob: [1.0] * keep_prob.shape[0]})\n",
     "\n",
     "    print(\"Result   = {}\".format(result))\n",
     "    print(\"Expected = {}\".format(y_web))\n",
@@ -1141,7 +1204,8 @@
    "source": [
     "with tf.Session() as sess:\n",
     "    saver.restore(sess, './lenet')\n",
-    "    result = sess.run(tf.nn.top_k(logits, 5), feed_dict={input_x: X_web, input_y: y_web})\n",
+    "    result = sess.run(tf.nn.top_k(logits, 5), feed_dict={input_x: X_web, input_y: y_web,\n",
+    "                                                         keep_prob: [1.0] * keep_prob.shape[0]})\n",
     "    for img_idx in range(len(result.values)):\n",
     "        print(\"Image {}, expected class {}\".format(img_idx, y_web[img_idx]))\n",
     "        for idx in range(len(result.values[img_idx])):\n",
@@ -1194,7 +1258,8 @@
     "    # image_input =\n",
     "    # Note: x should be the same name as your network's tensorflow data placeholder variable\n",
     "    # If you get an error tf_activation is not defined it maybe having trouble accessing the variable from inside a function\n",
-    "    activation = tf_activation.eval(session=sess,feed_dict={input_x : image_input})\n",
+    "    activation = tf_activation.eval(session=sess,feed_dict={input_x : image_input,\n",
+    "                                                            keep_prob: [1.0] * keep_prob.shape[0]})\n",
     "    featuremaps = activation.shape[3]\n",
     "    plt.figure(plt_num, figsize=(15,15))\n",
     "    for featuremap in range(featuremaps):\n",
@@ -1223,11 +1288,11 @@
    "source": [
     "with tf.Session() as sess:\n",
     "    saver.restore(sess, './lenet')\n",
-    "    outputFeatureMap([X_test[100]], tf.get_default_graph().get_tensor_by_name(\"ss3/conv_1/add:0\"), sess)\n",
+    "    outputFeatureMap([X_test[100]], tf.get_default_graph().get_tensor_by_name(\"ss16/conv_1/add:0\"), sess)\n",
     "    plt.show()\n",
-    "    outputFeatureMap([X_test[100]], tf.get_default_graph().get_tensor_by_name(\"ss3/conv_2/add:0\"), sess)\n",
+    "    outputFeatureMap([X_test[100]], tf.get_default_graph().get_tensor_by_name(\"ss16/conv_2/add:0\"), sess)\n",
     "    plt.show()\n",
-    "    outputFeatureMap([X_test[100]], tf.get_default_graph().get_tensor_by_name(\"ss3/conv_3/add:0\"), sess)\n",
+    "    outputFeatureMap([X_test[100]], tf.get_default_graph().get_tensor_by_name(\"ss16/conv_3/add:0\"), sess)\n",
     "    plt.show()"
    ]
   },
